<resources>
    <string name="app_name">DepotManage</string>
    <string name="action_settings">Settings</string>
    <string name="login_user_hint">用户名/手机/邮箱</string>
    <string name="login_rememberPassword">记住密码</string>
    <string name="login_password_hint">密码</string>
    <string name="Index_search_button">Find</string>
    <string name="Index_search_hint">Search...</string>
    <string name="login_name_login">登录</string>
    <string name="login_forgetPassword">忘记密码？</string>
    <string name="login_btn_text">演示账号</string>
    <string name="login_btn_text2">注册账号</string>
</resources>
