<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/logo"
            android:padding="2.0dip"
            android:layout_width="140.0dp"
            android:layout_height="140.0dp"
            android:layout_marginTop="15.0dp"
            android:src="@drawable/login_logo"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        >
    <RelativeLayout
        android:id="@+id/login_user"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/header"
        android:background="@color/colorBackground">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_user_hint"
            android:textSize="@dimen/login_userFont"
            android:textColor="@color/colorLoginUserText"
            android:clickable="true"
            android:layout_gravity="fill_vertical"
            android:typeface="monospace"
            android:layout_marginLeft="@dimen/login_editTextLeft"
            android:layout_marginRight="@dimen/login_editTextRight"/>
    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/login_user"

            android:id="@+id/linearLayout_password">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_password"
            android:textSize="@dimen/login_userFont"
            android:layout_marginLeft="@dimen/login_editTextLeft"
            android:layout_marginRight="@dimen/login_editTextRight"
            android:hint="@string/login_password_hint"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/RememberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            >
            <TextView
                android:id="@+id/RememberPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/login_rememberPassword"
                android:textSize="@dimen/login_rememberPasswordSize"
                android:textColor="@color/colorLoginRememberPassword"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:onClick=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnLogin_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RememberPassword"
            android:layout_marginTop="40dp"
            android:gravity="center"
            >

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:clickable="true"
            android:background="@drawable/circle_shape"
            android:text="@string/login_name_login"
            android:textSize="@dimen/login_loginTextSize"
             />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/forgetPasswordEditText"
            android:layout_below="@id/btnLogin_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <TextView
                android:id="@+id/ForgetPsdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/login_forgetPassword"
                android:textSize="@dimen/login_textSize2"

                />

        </LinearLayout>


        <LinearLayout
        android:id="@+id/login_btn"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/circle_shape2"
            android:text="@string/login_btn_text"
            android:textStyle="bold"
            android:textColor="@color/colorLoginBtnTextColor"
            android:layout_marginLeft="60dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/circle_shape2"
            android:text="@string/login_btn_text2"
            android:textStyle="bold"
            android:textColor="@color/colorLoginBtnTextColor"
            android:layout_marginLeft="115dp" />

    </LinearLayout>
    </LinearLayout>

</LinearLayout>